Bug 139352 - Sent URL received incorrectly
Summary: Sent URL received incorrectly
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: ICQ and AIM Plugins (other bugs)
Version First Reported In: 0.12.3
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-12-29 14:38 UTC by Michal Svec
Modified: 2008-12-28 14:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michal Svec 2006-12-29 14:38:01 UTC
Version:           0.12.3 (using KDE 3.5.5 "release 45" , openSUSE 10.2)
Compiler:          Target: i586-suse-linux
OS:                Linux (i686) release 2.6.18.2-34-default

Some clients (notable licq) have a "Send URL" function, but kopete can't receive it correctly.

For example, if I send Description:"Seznam Server" and URL:"http://www.seznam.cz" I receive this:
  nick: Seznam Serverþhttp://www.seznam.cz

And 'Serverþhttp://www.seznam.cz' is a reference leading to this URL (which obviously does not work):
  file:///opt/kde3/share/apps/kopete/styles/Gaim/Contents/Resources/Server%C3%BEhttp%3A//www.seznam.cz
Comment 1 Roman Jarosz 2008-12-28 14:45:36 UTC
SVN commit 902491 by rjarosz:

Fix bug 139352: Sent URL received incorrectly

BUG: 139352



 M  +1 -1      messagereceivertask.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=902491