Fix bug 139352: Sent URL received incorrectly

BUG: 139352


svn path=/trunk/KDE/kdenetwork/kopete/; revision=902491